import and concept query refactor